# kellax

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  TUTORIAL.md  pyproject.toml
.github/workflows/: ci.yml  draft-pdf.yml  tests.yml
book/: 01-the-fold.md  02-the-cusp.md  03-bratu.md  04-matrix-free.md  05-snaking.md  06-cstr.md  07-predator-prey.md  08-bratu-2d.md  09-differentiable.md  README.md
docs/: index.html
examples/: _style.py  bratu.py  bratu_2d.py  bratu_matrixfree.py  cstr.py  cstr_sensitivity.py  cubic_fold.py  cusp.py  predator_prey.py  swift_hohenberg.py
kellax/: __init__.py  analysis.py  bordered.py  branching.py  deflation.py  fixedpoint.py  folds.py  hessian.py  hopf.py  implicit.py  keller.py  matrixfree.py  newton_krylov.py  sensitivity.py
paper/: paper.bib  paper.md
tests/: test_bifurcations.py  test_kellax.py  test_solvers.py
