[project]
name = "kellax"
version = "0.1.0"
description = "Pseudo-arclength (Keller) continuation and bordered Newton solvers in JAX: trace solution branches of R(x, p) = 0 through folds with autodiff Jacobians; fold detection; roadmap to Moore-Spence fold tracking and differentiable continuation."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "jax>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kellax*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
